# quantchallenge-starter

./: .competition  pyproject.toml
research/: complete_research.ipynb
