[project]
name = "quant-challenge-2025"
version = "0.1.0"
description = "Repository containing statistical analyses and code for the 2025 Quant Challenge."
authors = [
  { name = "ikercb2000", email = "ikercb2000@gmail.com" },
  { name = "maurosuetta", email = "maurosuetta@gmail.com" }
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
  "scikit-learn (>=1.7.2,<2.0.0)",
  "polars (>=1.33.1,<2.0.0)",
  "pandas (>=2.3.2,<3.0.0)",
  "matplotlib (>=3.10.6,<4.0.0)",
  "commitizen (>=4.8.3,<5.0.0)",
  "pyarrow (>=21.0.0,<22.0.0)",
  "fitter (>=1.7.1,<2.0.0)",
  "seaborn (>=0.13.2,<0.14.0)",
  "pyod (>=2.0.5,<3.0.0)",
  "ipykernel (>=6.30.1,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [
  { include = "notebooks" },
  { include = "scripts" }
]
exclude = ["notebooks/*.ipynb"]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6"

[tool.poetry.scripts]
pred_model_1 = "scripts.pred_model_1:main"
